--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: rgb(20, 20, 45) !important;
+
+}
+@layer{
+    .btn{
+        @apply bg-[#42b0d1] hover:bg-[#8cdae4] transition-all duration-200 text-white rounded-[20%] flex justify-center items-center !important;
+    }
+    .cont{
+        @apply flex justify-center items-center;
+    }
+}
+ul li a{
+   
+    text-decoration: none;
 }
